<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/skyBlue"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/reqLayout"
        android:visibility="invisible"
        android:gravity="center"
        android:background="@color/blackFade">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:background="@drawable/border_rad"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/permReq"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="end"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noBtn"
                    android:backgroundTint="@color/normalRed"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/no" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yesBtn"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/yes" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>