<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackFade"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rad_black"
            android:layout_marginHorizontal="30dp"
            android:padding="20dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:background="@drawable/button_style_ash"
                android:padding="8dp"
                android:textSize="16sp"
                android:hint="@string/enter_playlist_name"
                android:textColorHint="@color/niner"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:gravity="center"
                android:textColor="@color/lightRed"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancelBtn"
                    android:backgroundTint="@color/blash5"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/cancel"
                    android:layout_marginEnd="5dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/renameBtn"
                    android:backgroundTint="@color/skyBlueDark"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/rename"
                    android:layout_marginEnd="5dp"
                    tools:ignore="ButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>